--- a/index.html
+++ b/index.html
@@ -1769,7 +1769,6 @@ function updateFinalAmountAndAlert() {
 updateFinalAmountAndAlert(); // 初始化
 
 
-// ===== 結帳按鈕 =====
 document.getElementById("posCheckout").onclick = async function () {
     const checkoutBtn = document.getElementById("posCheckout");
     if (checkoutBtn.disabled) return;
@@ -1778,7 +1777,6 @@ document.getElementById("posCheckout").onclick = async function () {
     checkoutBtn.innerText = "結帳中...";
 
     try {
-        // 檢查付款方式
         const paymentMethod = document.getElementById("posPayment")?.value;
         if (!paymentMethod) {
             alert("請先選擇付款方式！");
@@ -1795,11 +1793,20 @@ document.getElementById("posCheckout").onclick = async function () {
         const perMin = Number(document.getElementById("minConsumeInput")?.value) || 0;
         const minTotal = people * perMin;
 
+        // 計算結帳總額
         let finalAmount;
         if (perMin > 0 && perMin <= 300) {
             finalAmount = actual + minTotal;
         } else {
             finalAmount = Math.max(actual, minTotal);
+        }
+
+        // 🚨 總額為0阻止結帳
+        if (finalAmount <= 0) {
+            alert("❌ 結帳總額為 0，無法結帳！");
+            checkoutBtn.innerText = originalText;
+            checkoutBtn.disabled = false;
+            return;
         }
 
         // 最低消費確認（只在 perMin > 300）
@@ -1817,19 +1824,20 @@ document.getElementById("posCheckout").onclick = async function () {
             allowMinConsumeCheckout = false;
         }
 
-        // 購物車為 0 時判斷
+        // 購物車為 0 時判斷（僅在低消 > 300 才阻止）
         if (posCart.length === 0 && perMin > 300) {
-            alert("購物車是空的。");
+            alert("❌ 購物車是空的，無法結帳！");
             checkoutBtn.innerText = originalText;
             checkoutBtn.disabled = false;
             return;
         }
 
-        // ===== 呼叫結帳流程 =====
+        // ✅ 一切檢查通過，開始結帳流程
         await startCheckoutFlow(checkoutBtn, originalText);
 
     } catch (err) {
         console.error("結帳過程發生錯誤：", err);
+        // 只有真正錯誤才 alert
         alert("結帳失敗，請重試。");
         checkoutBtn.innerText = originalText;
         checkoutBtn.disabled = false;
