--- a/index.html
+++ b/index.html
@@ -613,9 +613,7 @@ button{cursor:pointer;outline:none;transition:0.2s;}
   
  <!-- ===== 業代 / 人數 / 低消 同行 ===== -->
 <div id="tableInfo" style="margin:8px 0; font-size:13.2px; display:flex; align-items:center; gap:10px; flex-wrap:nowrap;">
-
-  <label style="white-space:nowrap;">
-    
+  
     人數：
     <input id="peopleCount" type="number" min="1" value="1"
            style="width:55px; font-size:13.2px; padding:2px 4px;">
@@ -627,6 +625,7 @@ button{cursor:pointer;outline:none;transition:0.2s;}
            style="width:77px; font-size:13.2px; text-align:right; padding:2px 4px;">
     元/人
   </label>
+    <label style="white-space:nowrap;">
     業代：
     <input id="salesInput"
            list="salesList"
@@ -1736,7 +1735,8 @@ document.getElementById("posCheckout").onclick = async function () {
         return; // 停止結帳流程
     }
 
-    let actual = parseNumber(document.getElementById("afterTax").innerText) - (Number(document.getElementById("discount").value) || 0);
+let actual = parseNumber(document.getElementById("afterTax").innerText) 
+             - (Number(document.getElementById("discount").value) || 0);
 
 let people = Number(document.getElementById("peopleCount")?.value) || 0;
 let perMin = Number(document.getElementById("minConsumeInput")?.value) || 0;
@@ -1744,29 +1744,34 @@ let min = people * perMin;
 
 let finalAmount;
 
-// ✅ 新規則（300 為界）
+// ===== 新規則 =====
 if (perMin <= 300 && perMin > 0) {
-    finalAmount = actual + min;
-} else {
-    finalAmount = Math.max(actual, min);
-}
 
-    // 如果消費金額不足，顯示最低消費提示框
+    // ✅ 低消 ≤ 300 → 直接 低消 + 消費
+    finalAmount = actual + min;
+
+} else {
+
+    // ✅ > 300 才需要檢查是否未達低消
     if (actual < min && !allowMinConsumeCheckout) {
-        // 顯示消費金額不足的提示框
-        const message = `您的消費金額為 ${actual} 元，低於最低消費額 ${min} 元，是否確認結帳？`;
+
+        const message = `您的消費金額為 ${actual} 元，
+低於最低消費額 ${min} 元，是否確認結帳？`;
+
         if (confirm(message)) {
-            // 用戶選擇確認結帳，即使未達最低消費，強制使用最低消費金額
-            allowMinConsumeCheckout = true; // 設置允許最低消費結帳
-            document.getElementById("afterTax").innerText = min; // 強制將消費金額設為最低消費金額
-            startCheckoutFlow(checkoutBtn, originalText); // 直接進行結帳流程
+            allowMinConsumeCheckout = true;
+            finalAmount = min;
         } else {
-            // 用戶選擇取消結帳，恢復結帳按鈕
             checkoutBtn.innerText = originalText;
             checkoutBtn.disabled = false;
+            return;
         }
-        return; // 停止結帳流程
+
+    } else {
+        finalAmount = Math.max(actual, min);
     }
+}
+        
 
     allowMinConsumeCheckout = false; // 預設不允許最低消費結帳
 
