--- a/index.html
+++ b/index.html
@@ -1775,13 +1775,13 @@ if (perMin <= 300 && perMin > 0) {
 
     allowMinConsumeCheckout = false; // 預設不允許最低消費結帳
 
-    if (posCart.length === 0) {
-        alert("購物車是空的。");
-        checkoutBtn.innerText = originalText; // 恢復按鈕文字
-        checkoutBtn.disabled = false; // 恢復按鈕可點擊
-        return;
-    }
-
+    // ===== 購物車為空處理 =====
+        if (posCart.length === 0 && perMin > 300) {
+            alert("購物車是空的。");
+            newBtn.innerText = originalText;
+            newBtn.disabled = false;
+            return;
+        }
     // 如果沒有進入最低消費檢查，則直接繼續結帳流程
     startCheckoutFlow(checkoutBtn, originalText);
 };
