--- a/index.html
+++ b/index.html
@@ -1774,6 +1774,14 @@ if (perMin <= 300 && perMin > 0) {
         
 
     allowMinConsumeCheckout = false; // 預設不允許最低消費結帳
+    
+    // 🚨 總額為0阻止結帳
+        if (finalAmount <= 0) {
+            alert("❌ 結帳總額為 0，無法結帳！");
+            checkoutBtn.innerText = originalText;
+            checkoutBtn.disabled = false;
+            return;
+        }
 
     // ===== 購物車為空處理 =====
         if (posCart.length === 0 && perMin > 300) {
